# benjamin-assistant

./: Cargo.toml  README.md
src/: main.rs
src/ai_functions/: mod.rs
src/apis/: call_request.rs  mod.rs
src/helpers/: command_lines.rs  general.rs  mod.rs
src/models/: mod.rs
src/models/agent_basic/: basic_agent.rs  basic_trait.rs  mod.rs
src/models/agent_manager/: managing_agent.rs
src/models/agents/: agent_architect.rs  agent_backend.rs  agent_traits.rs
src/models/general/: llm.rs
